# factorygraph

./: Cargo.toml  README.md  antiwonderful.png.import  build.ps1  component.gd  component.tscn  graph.gd  graph.tscn  gui.gd  gui.tscn  icon.svg.import  input.tscn  project.godot  rectangleSelect.gd  rectangleSelect.tscn  wonderful.png.import
assets/: antigear.png.import  antiwonderful.png.import  gear.png.import  wonderful.png.import
site/: fonts.css  index.html
site/assets/testing/: data.json
site/pkg/: factorygraph.d.ts  factorygraph.js  factorygraph_bg.wasm  factorygraph_bg.wasm.d.ts
site/styles/: graph.css  header.css  item.css  main.css  nodes.css
src/: item.rs  lib.rs  node.rs  specification.rs  state.rs  util.rs
src/state/: specification.rs
src/state/specification/: item.rs  machine.rs  modifier.rs  recipe.rs  specify.rs
templates/themes/: componentDefault.tres  componentSelected.tres
