[package]
name = "factorygraph"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
gloo = "0.11"
readonly = "0.2"
lazy_static = "1"
slotmap = "1"
common_macros = "0.1"

[dependencies.web-sys]
features = ['Document', 'Element', 'HtmlElement', 'Node', 'Window', 'console', 'EventTarget', 'MouseEvent', 'WheelEvent', 'CssStyleDeclaration', 'DomTokenList']
version = "0.3"
